(feat) added TODO folders, basic backend functionality

--- a/2025-09-25/martin/package.json
+++ b/2025-09-25/martin/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "frontend": "cd frontend && npm run dev",
     "backend": "cd backend && npm run dev",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend\""
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "devtodo": "concurrently \"npm run todofrontend\" \"npm run todobackend\""
   },
   "keywords": [],
   "author": "",
