--- a/2025-09-25/martin/todobackend/package.json
+++ b/2025-09-25/martin/todobackend/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
