--- a/2025-09-25/martin/package.json
+++ b/2025-09-25/martin/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "concurrently": "^9.2.1"
   }
 }
