--- a/2025-09-25/martin/package.json
+++ b/2025-09-25/martin/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.3.2",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
